; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/http3/extr_........libhttp3qpack.c_emit_insert_with_nameref.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/http3/extr_........libhttp3qpack.c_emit_insert_with_nameref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32* }
%struct.TYPE_8__ = type { i32, i32 }

@H2O_HPACK_ENCODE_INT_MAX_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, %struct.TYPE_9__*, i32, i32, i64)* @emit_insert_with_nameref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_insert_with_nameref(i32* %0, i32* %1, %struct.TYPE_9__* %2, i32 %3, i32 %4, i64 %5) #0 {
  %7 = alloca %struct.TYPE_8__, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_9__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = bitcast %struct.TYPE_8__* %7 to i64*
  store i64 %5, i64* %13, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store %struct.TYPE_9__* %2, %struct.TYPE_9__** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  %14 = load i32*, i32** %9, align 8
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load i32, i32* @H2O_HPACK_ENCODE_INT_MAX_LENGTH, align 4
  %20 = mul nsw i32 %19, 2
  %21 = add nsw i32 %18, %20
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = add nsw i32 %21, %23
  %25 = call i32 @h2o_vector_reserve(i32* %14, %struct.TYPE_9__* %15, i32 %24)
  %26 = load i32, i32* %11, align 4
  %27 = icmp ne i32 %26, 0
  %28 = zext i1 %27 to i64
  %29 = select i1 %27, i32 64, i32 0
  %30 = or i32 128, %29
  %31 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %32 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %31, i32 0, i32 1
  %33 = load i32*, i32** %32, align 8
  %34 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %35 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i32, i32* %33, i64 %37
  store i32 %30, i32* %38, align 4
  %39 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %40 = load i32, i32* %12, align 4
  %41 = call i32 @flatten_int(%struct.TYPE_9__* %39, i32 %40, i32 6)
  %42 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = call i32 @flatten_string(%struct.TYPE_9__* %42, i32 %44, i32 %46, i32 7, i32 0)
  ret void
}

declare dso_local i32 @h2o_vector_reserve(i32*, %struct.TYPE_9__*, i32) #1

declare dso_local i32 @flatten_int(%struct.TYPE_9__*, i32, i32) #1

declare dso_local i32 @flatten_string(%struct.TYPE_9__*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
